huge update. Was on vacation doing a lot of traveling and worked on this whenever I could.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,42 +1,291 @@
 body {
-  display: flex;
   font-family: 'Mortal Kombat 4', sans-serif;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(to bottom right, darkred, orange);
 }
 
-h1 {
-  font-size: 72px;
-  text-align: center;
-}
-
-p {
-  font-size: 30px;
-  text-align: center;
-
-}
-
+/*  Home for timer, intro, questions and buttons */
 #kombatBox {
-  display: flexbox;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  left: 30%;
-  top: 20%;
-  width: 1000px;
-  height: 700px;
-  border: 1px solid black;
+  align-items: center;
+  width: 500px;
+  height: 500px;
+  border: 5px solid black;
+  box-shadow: 6px 6px;
 }
 
+/* Test your js button */
 #startClock {
   background-color: black;
-  margin-left: 38%;
   padding: 15px 32px;
   font-size: 20px;
   color: white;
   font-family: 'Mortal Kombat 4', sans-serif;
+
+}
+
+#jsQuestions {
+  margin: 20px;
+  display: flex;
+  margin: 20px;
+  align-items: center;
+  flex-direction: column;
+  font-size: 20px;
 }
 
 #clock {
   float: right;
 }
 
+#Back {
+  background-color: black;
+  font-family: 'Mortal Kombat 4', sans-serif;
+  padding: 10px;
+  font-size: 20px;
+  color: white;
+  top: 30%;
+  left: 55%;
+  width: auto;
+  text-align: center;
+  text-decoration: none;
+}
+
+#clearData {
+  background-color: black;
+  padding: 10px;
+  font-size: 20px;
+  color: white;
+  top: 30%;
+  right: 5%;
+  text-align: center;
+  font-family: 'Mortal Kombat 4', sans-serif;
+}
+
+button {
+
+  border-radius: 8px;
+  align-self: center;
+}
+
+#highScore ul {
+
+  padding-inline-start: 0px;
+
+}
+
+ul {
+  padding-inline-start: 0px;
+  list-style-type: none;
+}
+
+textarea {
+  width: 90%;
+  margin: 20px;
+
+}
+
+#Submit {
+  background-color: black;
+  padding: 15px 32px;
+  font-size: 20px;
+  color: white;
+  font-family: 'Mortal Kombat 4', sans-serif;
+}
+
+label {
+  margin-right: 10px;
+}
+
+input {
+  margin-bottom: 20px;
+  width: 50%;
+  border: 1px solid lightgray;
+  font-family: 'Mortal Kombat 4', sans-serif;
+}
+
+h1 {
+  text-align: center;
+}
+
+li {
+  text-align: center;
+  background-color: black;
+  margin-top: 10px;
+  padding: 5px 15px;
+  width: 80%;
+  font-size: 18px;
+  color: white;
+  font-family: 'Mortal Kombat 4', sans-serif;
+}
+
+#createDiv {
+  margin-top: 20px;
+}
+
+/* Got this cool background code from Codepen - https://codepen.io/leglock/pen/qBOZGEa */
+.sprite {
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/3157759/MK3-JaxRunning.png);
+  background-repeat: no-repeat;
+  display: block;
+  width: 101px;
+  height: 140px;
+  animation-name: running;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: steps(1);
+  zoom: 1.5;
+  -moz-transform: scale(1.5);
+  -moz-transform-origin: 151px 0;
+}
+
+.box {
+  position: relative;
+  top: 0px;
+  animation-name: moving;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes moving {
+  0% {
+    left: -800px;
+  }
+
+  100% {
+    left: 65vw;
+  }
+}
+
+@keyframes running {
+  0% {
+    background-position: -5px -5px;
+  }
+
+  8.3% {
+    background-position: -116px -5px;
+  }
+
+  16.7% {
+    background-position: -227px -5px;
+  }
+
+  25% {
+    background-position: -338px -5px;
+  }
+
+  33.3% {
+    background-position: -5px -155px;
+  }
+
+  41.7% {
+    background-position: -116px -155px;
+  }
+
+  50% {
+    background-position: -227px -155px;
+  }
+
+  58.3% {
+    background-position: -338px -155px;
+  }
+
+  66.7% {
+    background-position: -449px -5px;
+  }
+
+  75% {
+    background-position: -449px -155px;
+  }
+
+  83.3% {
+    background-position: -5px -305px;
+  }
+
+  91.7% {
+    background-position: -116px -305px;
+  }
+
+  100% {
+    background-position: -5px -5px;
+  }
+}
 
 
+/* Media Query: 768px */
+@media screen and (max-width: 768px) {
+
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 768px;
+  }
+
+  #kombatBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  a {
+    display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  }
+
+  #goBack {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #clear {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+  }
+}
+
+/* Media query: 500px */
+@media screen and (max-width: 500px) {
+
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-width: 640px;
+  }
+
+  #kombatBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
