--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+
+
 body {
   font-family: 'Mortal Kombat 4', sans-serif;
   margin: 0;
@@ -32,7 +34,7 @@ body {
   font-size: 20px;
   color: white;
   font-family: 'Mortal Kombat 4', sans-serif;
-
+  cursor: pointer;
 }
 
 #jsQuestions {
@@ -59,6 +61,7 @@ body {
   width: auto;
   text-align: center;
   text-decoration: none;
+  cursor: pointer;
 }
 
 #clearData {
@@ -70,10 +73,11 @@ body {
   right: 5%;
   text-align: center;
   font-family: 'Mortal Kombat 4', sans-serif;
+  cursor: pointer;
 }
 
 button {
-
+  cursor: pointer;
   border-radius: 8px;
   align-self: center;
 }
@@ -101,6 +105,7 @@ textarea {
   font-size: 20px;
   color: white;
   font-family: 'Mortal Kombat 4', sans-serif;
+  cursor: pointer;
 }
 
 label {
@@ -119,6 +124,7 @@ h1 {
 }
 
 li {
+  cursor: pointer;
   text-align: center;
   background-color: black;
   margin-top: 10px;
